--- a/index.html
+++ b/index.html
@@ -18,35 +18,35 @@
 
 <div class="navbox">
   <ul class="nav">
-      <li><a href="#">Brand</a>
+      <li><a href="https://jisunlee1004.github.io/boheenludwig_sub1/">Brand</a>
       <ul class="sub">
-          <li><a href="#">Identity</a></li>
-          <li><a href="#">Store</a></li>
-          <li><a href="#">membership</a></li>
+          <li><a href="https://jisunlee1004.github.io/boheenludwig_sub1/#price">Identity</a></li>
+          <li><a href="https://jisunlee1004.github.io/boheenludwig_sub1/ #store">Store</a></li>
+          <li><a href="https://jisunlee1004.github.io/boheenludwig_sub1/#membership">membership</a></li>
       </ul></li>
-      <li><a href="#">Boheen</a>
+      <li><a href="https://jisunlee1004.github.io/boheenludwig_sub2/">Boheen</a>
           <ul class="sub">
-              <li><a href="#">A Special place</a></li>
-              <li><a href="#">Variety</a></li>
-              <li><a href="#">Blending</a></li>
-              <li><a href="#">Roasting</a></li>
+              <li><a href="https://jisunlee1004.github.io/boheenludwig_sub2/">Special</a></li>
+              <li><a href="https://jisunlee1004.github.io/boheenludwig_sub2/">Variety</a></li>
+              <li><a href="https://jisunlee1004.github.io/boheenludwig_sub2/">Blending</a></li>
+              <li><a href="https://jisunlee1004.github.io/boheenludwig_sub2/">Roasting</a></li>
           </ul></li>
-      <li><a href="#">Product</a>
+      <li><a href="https://jisunlee1004.github.io/boheenludwig_sub3/">Product</a>
           <ul class="sub">
-              <li><a href="#">Best product</a></li>
-              <li><a href="#">Beans</a></li>
-              <li><a href="#">Coldbrew</a></li>
-              <li><a href="#">Goods</a></li>
+              <li><a href="https://jisunlee1004.github.io/boheenludwig_sub3/#best">Best product</a></li>
+              <li><a href="https://jisunlee1004.github.io/boheenludwig_sub3/#been">Beans</a></li>
+              <li><a href="https://jisunlee1004.github.io/boheenludwig_sub3/#been1">Coldbrew</a></li>
+              <li><a href="https://jisunlee1004.github.io/boheenludwig_sub3/#goods">Goods</a></li>
           </ul></li>
       </li>
-      <li><a href="#">Class</a>
+      <li><a href="https://jisunlee1004.github.io/boheenludwig_sub4/">Class</a>
           <ul class="sub">
-              <li><a href="#">One day class</a></li>
-              <li><a href="#">Home cafe recipe</a></li>
+              <li><a href="https://jisunlee1004.github.io/boheenludwig_sub4/#box">One day class</a></li>
+              <li><a href="https://jisunlee1004.github.io/boheenludwig_sub4/#box">Home cafe recipe</a></li>
               
           </ul></li>
       </li>
-      <li><a href="#">Community</a></li>
+      <li><a href="https://jisunlee1004.github.io/boheenludwig_sub5/">Community</a></li>
   </ul></div><!--nav f-->
 
 <div class="banner">
